<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_malaria"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/record_malaria_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/record_visits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_record_anc"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/record_btn_selector"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/record_anc"
                android:textColor="@color/white"
                android:visibility="gone" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_record_anc_not_done"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/record_btn_selector_above_twentyfr"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/record_anc_visit_not_done"
                android:textColor="@color/grey"
                android:visibility="gone" />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/record_visit_not_done_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/cross_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/activityrow_notvisited" />


            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_not_visit_this_month"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/textview_undo"
                android:layout_toEndOf="@+id/cross_image"
                android:padding="10dp"
                android:text="@string/not_visiting_this_month"
                android:textColor="@color/black" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_undo"
                style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:text="@string/undo"
                android:textColor="@color/primary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/visit_done_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/tick_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/activityrow_visited" />


            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_visit_done"
                style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/textview_edit"
                android:layout_toEndOf="@+id/tick_image"
                android:padding="10dp"
                android:text="@string/visit_done"
                android:textColor="@color/alert_complete_green" />

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/textview_edit"
                style="@style/CustomFontTextViewStyle.ListView.Normal.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:text="@string/edit"
                android:textColor="@color/primary" />

        </RelativeLayout>


        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_record_malaria"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/record_btn_selector"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/record_malaria"
            android:textColor="@color/white" />

    </LinearLayout>

    <View
        android:id="@+id/view_record"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="5dp" />
</LinearLayout>